2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-preferences.c (dh_preferences_show_dialog): Use correct
	data directory.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-error.c:
	* src/dh-link.c:
	* src/dh-link.h: Whitespace cleanup.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_cb): Try a bit harder to get
	useful info from old devhelp files by setting the link type to
	struct, enum if those can be extracted from the name.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: Remove g_return_* for static functions
	except for the consistency stamp checks.
	- Simplify the finalizer.
	- Small style cleanups.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c:
	* src/dh-keyword-model.h: Untabify, remove trailing whitespace.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-book-tree.c:
	* src/dh-book-tree.h: Move private struct typedef from the header.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-book-tree.c:
	* src/dh-book-tree.h: Modernize the code a bit, use private
	instance data and G_DEFINE_TYPE, clean up a bit.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (dh_base_get_window_on_current_workspace): Fix
	build.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/*.h: Update modelines in the header files too.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-book-tree.h:
	* src/dh-keyword-model.h:
	* src/dh-preferences.h:
	* src/dh-search.h:
	* src/eggfindbar.h: More single header include fixing.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-window.[ch] (_dh_window_display_uri): New private
	function that displays a URI that is known to be in the docs.

2008-10-02  Richard Hult  <richard@imendio.com>

	* src/dh-base.c (dh_base_get_window): New function that returns an
	existing window on the current workspace or creates a new one.