@@ -1,7 +1,7 @@
 /* -*- Mode: C; tab-width: 8; indent-tabs-mode: nil; c-basic-offset: 8 -*- */
 /*
  * Copyright (C) 2001-2002 Mikael Hallendal <micke@imendio.com>
- * Copyright (C) 2004 Imendio hB
+ * Copyright (C) 2004 Imendio AB
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -22,23 +22,16 @@
 #ifndef __DH_UTIL_H__
 #define __DH_UTIL_H__
 
-#include <glib.h>
 #include <glade/glade.h>
 
-const gchar *  dh_dot_dir                    (void);
-GladeXML *     dh_glade_get_file             (const gchar  *filename,
-					      const gchar  *root,
-					      const gchar  *domain,
-					      const gchar  *first_required_widget,
-					      ...);
-void           dh_glade_connect              (GladeXML     *gui,
-					      gpointer      user_data,
-					      gchar        *first_widget,
-					      ...);
-/* Taken from gnome-vfs CVS. */
-gchar *        dh_util_uri_relative_new      (const gchar          *text_uri,
-					      const gchar          *base_uri);
-
-gboolean       dh_util_uri_is_relative       (const gchar          *uri);
+GladeXML *dh_glade_get_file (const gchar *filename,
+                             const gchar *root,
+                             const gchar *domain,
+                             const gchar *first_required_widget,
+                             ...);
+void      dh_glade_connect  (GladeXML    *gui,
+                             gpointer     user_data,
+                             gchar       *first_widget,
+                             ...);
 
 #endif /* __DH_UTIL_H__ */
