@@ -1,5 +1,12 @@
 2008-10-02  Richard Hult  <richard@imendio.com>
 
+	* src/dh-util.c:
+	* src/dh-util.h: Remove unused
+	functions (dh_util_uri_relative_new, dh_util_uri_is_relative,
+	tagify_bold_labels) and their helper functions.
+
+2008-10-02  Richard Hult  <richard@imendio.com>
+
 	* src/dh-preferences.c (dh_preferences_show_dialog): Use correct
 	data directory.
 
